# leviathanK

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  hello.c  libhello.c
include/: command.h  liblevi.h  list.h  memory.h  path_tree.h  shell.h  util.h
src/levi/: command.c  main.c  shell.c  test.c
src/lib/: liblevi.c  list.c  memory.c  path_tree.c  util.c
